increase and decrease move in ChessPiece, rename method in class Piece, initialize movement Pawn