@@ -6,11 +6,9 @@ import boardgame.Position;
 import chess.enums.Color;
 import chess.pieces.*;
 import exceptions.ChessException;
-import views.MessageError;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static views.MessageError.*;
 
@@ -49,10 +47,6 @@ public class ChessMatch {
         return check;
     }
 
-    public void nextTurn() {
-        turn++;
-        currentPlayer = (currentPlayer == Color.WHITE) ? Color.BLACK : Color.WHITE;
-    }
 
     public ChessPiece[][] getPieces() {
         ChessPiece[][] mat = new ChessPiece[board.getRows()][board.getColumns()];
@@ -68,11 +62,6 @@ public class ChessMatch {
         return (color == Color.WHITE) ? Color.BLACK : Color.WHITE;
     }
 
-    private void placeNewPieceWithChessCoordinates(char column, int row, ChessPiece piece) {
-        board.placePiece(piece, new ChessPosition(column, row).toPosition());
-        piecesOnTheBoard.add(piece);
-    }
-
     private ChessPiece king(Color color) {
         List<Piece> pieceList = piecesOnTheBoard.stream().filter(x -> ((ChessPiece) x).getColor() == color).toList();
         for (Piece p : pieceList) {
@@ -85,14 +74,15 @@ public class ChessMatch {
 
     private boolean testCheck(Color color) {
         Position kingPosition = king(color).getChessPosition().toPosition();
-        List<Piece> opponentPieces = piecesOnTheBoard.stream().filter(x -> ((ChessPiece) x).getColor() == opponent(color)).collect(Collectors.toList());
+        List<Piece> opponentPieces = piecesOnTheBoard.stream().filter(x -> ((ChessPiece) x).getColor() == opponent(color)).toList();
         for (Piece p : opponentPieces) {
             boolean[][] mat = p.possibleMoves();
-            if (!mat[kingPosition.getRow()][kingPosition.getColumn()]) {
-                return false;
+            int[][] aux = new int[kingPosition.getRow()][kingPosition.getColumn()];
+            if (mat[kingPosition.getRow()][kingPosition.getColumn()]) {
+                return true;
             }
         }
-        return true;
+        return false;
     }
 
     public void initialSetup() {
@@ -124,8 +114,9 @@ public class ChessMatch {
     }
 
     private Piece makeMove(Position source, Position target) {
-        Piece p = board.removePiece(source);
+        ChessPiece p = (ChessPiece) board.removePiece(source);
         Piece capturedPiece = board.removePiece(target);
+        p.increaseMoveCount();
         board.placePiece(p, target);
 
         if (capturedPiece != null) {
@@ -136,7 +127,8 @@ public class ChessMatch {
     }
 
     public void undoMove(Position source, Position target, Piece capturedPiece) {
-        Piece p = board.removePiece(target);
+        ChessPiece p = (ChessPiece) board.removePiece(target);
+        p.decreaseMoveCount();
         board.placePiece(p, source);
 
         if (capturedPiece != null) {
@@ -144,6 +136,11 @@ public class ChessMatch {
             capturedPieces.remove(capturedPiece);
             piecesOnTheBoard.add(capturedPiece);
         }
+    }
+
+    public void nextTurn() {
+        turn++;
+        currentPlayer = (currentPlayer == Color.WHITE) ? Color.BLACK : Color.WHITE;
     }
 
     private void validateSourcePosition(Position position) {
@@ -159,9 +156,14 @@ public class ChessMatch {
     }
 
     private void validateTargetPosition(Position source, Position target) {
-        if (!board.piecePosition(source).possibleMovie(target)) {
-            throw new ChessException(MessageError.notMovePieceChosen());
+        if (!board.piecePosition(source).possibleMove(target)) {
+            throw new ChessException(notMovePieceChosen());
         }
+    }
+
+    private void placeNewPieceWithChessCoordinates(char column, int row, ChessPiece piece) {
+        board.placePiece(piece, new ChessPosition(column, row).toPosition());
+        piecesOnTheBoard.add(piece);
     }
 
     public void replacePromotedPiece(String type) {
@@ -171,6 +173,7 @@ public class ChessMatch {
         for (int i = 1; i <= board.getRows(); i++) {
             for (int c = 0; c < board.getColumns(); c++) {
                 char j = (char) (97 + c);
+
                 if (i == 8 && j == 97 || i == 8 && j == 104)
                     placeNewPieceWithChessCoordinates(j, i, new Rook(board, Color.BLACK));
                 if (i == 8 && j == 98 || i == 8 && j == 103)
@@ -179,8 +182,7 @@ public class ChessMatch {
                     placeNewPieceWithChessCoordinates(j, i, new Bishop(board, Color.BLACK));
                 if (i == 8 && j == 100) placeNewPieceWithChessCoordinates(j, i, new King(board, Color.BLACK));
                 if (i == 8 && j == 101) placeNewPieceWithChessCoordinates(j, i, new Queen(board, Color.BLACK));
-                if (i == 7 && j < 105) {
-                }// placeNewPieceWithChessCoordinates(j, i, new Pawn(board, Color.BLACK));
+                if (i == 7 && j < 105) placeNewPieceWithChessCoordinates(j, i, new Pawn(board, Color.BLACK));
 
                 if (i == 1 && j == 97 || i == 1 && j == 104)
                     placeNewPieceWithChessCoordinates(j, i, new Rook(board, Color.WHITE));
@@ -190,8 +192,7 @@ public class ChessMatch {
                     placeNewPieceWithChessCoordinates(j, i, new Bishop(board, Color.WHITE));
                 if (i == 1 && j == 101) placeNewPieceWithChessCoordinates(j, i, new King(board, Color.WHITE));
                 if (i == 1 && j == 100) placeNewPieceWithChessCoordinates(j, i, new Queen(board, Color.WHITE));
-                if (i == 2 && j < 105) {
-                } //placeNewPieceWithChessCoordinates(j, i, new Pawn(board, Color.WHITE));
+                if (i == 2 && j < 105) placeNewPieceWithChessCoordinates(j, i, new Pawn(board, Color.WHITE));
 
             }
         }
